[Calendar] update calendar view when measurement system is changed